fix navbar not showing up

--- a/css/style.css
+++ b/css/style.css
@@ -1358,14 +1358,6 @@ body {
     width: 50%;
   }
 
-  .lg\:w-\[65\%\] {
-    width: 65%;
-  }
-
-  .lg\:w-2\/3 {
-    width: 66.666667%;
-  }
-
   .lg\:w-3\/4 {
     width: 75%;
   }
